            -media: only list
            -list of pdf files.
        -add edit link to excerpts too.
        -remove breadcroumb in case of attachment
    
    commit#16.7.2
    20 July, 2016
        == breadcrumb ==
            - shows category prefix if single
            - shows hierarchy of pages.
            - add an action hook for custom taxonomy or post type
        ==attachment page ==
            -always show image navigation (so far navigation was possible only with common parents);
            -center heading of the page.
    
    commit #16.7.3
    21 July, 2016
        ==responsive design fixings ==
            - header layout change: insert top bar. 
            - fix margins, paddings
        ==bug==
            -breadcrumb first level category error
        
    commit #16.7.4
    25 July, 2016
        == new function ==
            -manduca page navigation. Shows the serial number of posts. eg. 1-10, 11-20 etc.
        ==bug==
            from previous commit: hide top bar in large screen.
            
    version 16.7 not uploaded to repository
    
    commit #16.8.1
    8 August, 2016
        == bug ==
            -some PHP configuration did not show hungarian dates in excerpts. Fixed in function.php
        - add shortcode: display subpages. e.g. [subpages parent="1"]
        ==add filter ==
            /* Boolean filter
             * @ name: manduca_page_navigation_format
             * @ true : default : use from-to pagination
             * @ false : use classic navigation
		
    commit #16.8.2
        11 August, 2016.
        ==bugs  ==
            -delete 'A' from hungarian translation (author archives)
            -change color of vcard item (there was contrast problem)
        ==code optimize==
            -add <main> and delete rule="main" from all files.
            /* see: http://stackoverflow.com/questions/10403138/what-is-the-purpose-of-the-role-attribute-in-html
            -add more rem element to style.css 